Should've made more commits! near completion :o

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
             <p>This game is played in the browser console.</p>
         </div>-->
 
-        <script src="main.js"></script>
+        <script src="secondary.js"></script>
     </body>
 </html>
