Added a 'Start game' button to html. Removed 'game()' function from js and moved it to the button.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
         <div class="title">
             <h1>Rock Paper Scissors</h1>
         </div>
-        <!--<div class="button">
-            <button>Play new game</button>
+        <div class="button">
+            <button onclick="game()">Start game</button>
         </div>
-        <div>
-            <p>This game is played in the browser console.</p>
-        </div>-->
 
         <script src="secondary.js"></script>
     </body>
