--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Ro Sham Bo</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="title">
+        <div class="flex-container">
             <h1>Rock Paper Scissors</h1>
-        </div>
-        <div class="button">
             <button onclick="game()">Start game</button>
         </div>
 
