--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="flex-container">
             <h1>Rock Paper Scissors</h1>
             <button onclick="game()">Start game</button>
-            <p>This game is played in the console! On mac, press Option J to open the console.</p>
+            <p>This game is played in the console! On mac, press cmd Option J to open the console.</p>
         </div>
 
         <script src="secondary.js"></script>
