--- a/index.html
+++ b/index.html
@@ -7,18 +7,37 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Ro Sham Bo</title>
+        <title>Ro Sham Bo with UI</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="flex-container">
-            <h1>Rock Paper Scissors</h1>
-            <button onclick="game()">Start game</button>
-            <p>This game is played in the console! On mac, press cmd Option J to open the console.</p>
+        <div class="score">
+            <h1 class="ties">Ties: 0</h1>
         </div>
-
+        <div class="winner">
+            <h1 class="winner"></h1>
+            <button class="reset" onclick="resetGame()">Play Again?</button>
+        </div>
+        <div class="playerSelection">
+            <h3 class="playerChoice"></h3>
+            <h3 class="playerScore">Score: 0</h3>
+            <div class="playerImgs">
+                <img src="./images/rock.png" alt="rock" class="pImg" id="rock">
+                <img src="./images/paper.png" alt="paper" class="pImg" id="paper">
+                <img src="./images/scissors.png" alt="scissors" class="pImg" id="scissors">
+            </div>
+        </div>
+        <div class="computerSelection">
+            <h3 class="computerChoice"></h3>
+            <h3 class="computerScore">Score: 0</h3>
+            <div class="computerImgs">
+                <img src="./images/rock.png" alt="rock" class="rock">
+                <img src="./images/paper.png" alt="paper" class="paper">
+                <img src="./images/scissors.png" alt="scissors" class="scissors">
+            </div>
+        </div>
         <script src="secondary.js"></script>
     </body>
 </html>
